@@ -1,3 +1,6 @@
+2005/02/06 Jamal James <teflon114@gmail.com>
+* Updated to new Blowfish class provided by k2r
+
 2005/02/05 Morgan Christiansson <drftpd@mog.se>
 * Made UserManagerConverter convert lastReset so that users aren't
   reset when imported.
